<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_movie_detail">Detail Movie</string>
    <string name="title_tvshow_detail">Detail TV Show</string>
    <string name="movie">Movie</string>
    <string name="tvshow">TvShow</string>
    <string name="title">Title</string>
    <string name="release_date">Release Date</string>
    <string name="score">00.0</string>
    <string name="popularity">Popularity</string>
    <string name="user_score">User Score</string>
    <string name="original_title">Original Title</string>
    <string name="overview">Overview</string>
</resources>